--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/ico">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
 	<!-- Twitter -->
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux" />
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
 	<meta name="twitter:description"
-		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière." />
-	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp" />
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
+	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp">
 	<!-- Open Graph meta (Facebook, Linkedin) -->
-	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux" />
-	<meta property="og:type" content="article" />
+	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
+	<meta property="og:type" content="article">
 	<meta property="og:description"
-		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière." />
-	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp" />
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
+	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp">
 </head>
 
 <body>
@@ -48,8 +48,7 @@
 			</ul>
 		</div>
 	</div>
-	<section id="header">
-
+	<div id="header">
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -67,9 +66,11 @@
 						width="1920" height="888">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto" loading="lazy"
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto"
+						loading="lazy"
 						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-2048.webp 2048w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1700.webp 1700w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w"
-						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920" height="888">
+						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920"
+						height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100 h-auto"
@@ -89,13 +90,13 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-	</section>
-	<section id="about">
+	</div>
+	<section>
 		<div id="about">
 			<div class="picture left">
 				<img src="./assets/images/nina.jpg" loading="lazy"
 					srcset="./assets/images/nina-560.webp 560w, ./assets/images/nina-320.webp 320w"
-					sizes="(min-width: 2000px) 493px, (min-width: 1000px) calc(31.22vw - 125px), (min-width: 660px) calc(50vw - 200px), calc(80vw - 102px)"
+					sizes="(min-width: 2020px) 560px, (min-width: 1000px) calc(30.6vw - 52px), (min-width: 660px) calc(50vw - 100px), calc(80vw - 51px)"
 					alt="Portrait de Nina Carducci" width="375" height="375">
 			</div>
 			<div id="about-me">
@@ -115,7 +116,6 @@
 					et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
 		</div>
-		</div>
 	</section>
 	<section id="gallery">
 		<h2 class="title">Portfolio</h2>
@@ -125,47 +125,47 @@
 					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-650.webp 650w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Concert de Paul Aaron" width="440" height="440" />
+					alt="Concert de Paul Aaron" width="440" height="440">
 				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-650.webp 650w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Chef d'entreprise Ali Morshedlou" width="440" height="440" />
+					alt="Chef d'entreprise Ali Morshedlou" width="440" height="440">
 				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-650.webp 650w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Chef d'entreprise Jason Goodman" width="440" height="440" />
+					alt="Chef d'entreprise Jason Goodman" width="440" height="440">
 				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-650.webp 650w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Mariage de Hannah" width="440" height="440" />
+					alt="Mariage de Hannah" width="440" height="440">
 				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-650.webp 650w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Portrait de Ade Tunji" width="440" height="440" />
+					alt="Portrait de Ade Tunji" width="440" height="440">
 				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-650.webp 650w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Mariage de Jakob Owens" width="440" height="440" />
+					alt="Mariage de Jakob Owens" width="440" height="440">
 				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-650.webp 650w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Portrait de Nino Van Prattenburg" width="440" height="440" />
+					alt="Portrait de Nino Van Prattenburg" width="440" height="440">
 				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-650.webp 650w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Concert d'Austin Neill" width="440" height="440" />
+					alt="Concert d'Austin Neill" width="440" height="440">
 				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-650.webp 650w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-320.webp 320w"
 					sizes="(min-width: 1420px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-					alt="Chef d'entreprise Mateus Campos" width="440" height="440" />
+					alt="Chef d'entreprise Mateus Campos" width="440" height="440">
 			</div>
 		</div>
 		<div class="quote">
@@ -237,38 +237,37 @@
 		<p> N’hésitez pas à m’écrire ! Je vous répondrai en moins de 24 heures</p>
 		<div class="container">
 			<div class="form-container">
-				<form action="" method="post">
+				<form action="#" method="post">
 					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom">
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
 					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer" />
+					<input type="submit" value="Envoyer">
 				</form>
 			</div>
 			<div class="picture right">
 				<img src="./assets/images/camera.jpg" loading="lazy"
 					srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
 					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1020px) calc(28.16vw - 35px), (min-width: 980px) calc(-510vw + 5346px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
-					alt="Appareil photo sur fond sombre" width="300" height="300" />
+					alt="Appareil photo sur fond sombre" width="300" height="300">
 			</div>
+		</div>
 	</section>
 	<footer id="footer">
-		<div class="divInfos">
+		<div class="divInfos" itemscope itemtype="https://schema.org/Organization ">
 			<div class="colInfos">
 				<h4>Adresse</h4>
-				<div itemprop=”address” itemscope itemtype=”https://schema.org/PostalAddress”>
-					<span itemprop=”streetAddress”>68 avenue Alsace-Lorraine</span>
-					<br>
-					<span itemprop=”postalCode”>33000</span>
-					<span itemprop=”addressLocality”>Bordeaux</span>
-				</div>
+				<span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>
+				<br>
+				<span itemprop="postalCode">33000</span>
+				<span itemprop="addressLocality">Bordeaux</span>
 			</div>
 			<div class="colInfos">
 				<h4>Coordonnées</h4>
-				<span>Téléphone</span>
-				<p itemprop="telephone">05 56 67 78 89</p>
+				<span>Téléphone</span><br>
+				<span itemprop="telephone">05 56 67 78 89</span>
 			</div>
 			<div class="colInfos">
 				<h4>Horaires</h4>
@@ -283,7 +282,6 @@
 				<span itemprop="price" content="350">Shooting : 350€</span><br>
 				<span itemprop="price" content="400">Album : 400€</span>
 			</div>
-		</div>
 		</div>
 	</footer>
 	<script src="./assets/bootstrap/bootstrap.bundle-min.js"></script>
