--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		"@context": "https://schema.org",
 		"@type": ["localBusiness", "ProfessionalService", "Person"],
 		"name": "Nina Carducci",
-		"image": "https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp",
+		"image": "https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina.jpg",
 		"address": {
 			"@type": "PostalAddress",
 			"streetAddress": "68 avenue Alsace-Lorraine",
