--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
-				<li><a href="#services">Service</a></li>
+				<li><a href="#services">Services</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img
 							src="assets/images/instagram.png" alt="logo Instagram" width="20" height="20"></a></li>
@@ -119,7 +119,7 @@
 		</div>
 	</section>
 	<section id="gallery">
-		<h2 class="title">Portfolio</h2>
+		<h2 class="title">Galerie</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
