--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100 h-auto"
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100 h-auto" loading="lazy"
 						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp 1920w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1440.webp 1440w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
 						sizes="100vw" alt="Photo de Ryoji Iwata sur un passage clouté"
 						width="1920" height="888">
