--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 						width="1920" height="888">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto" 
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto" loading="lazy"
 						srcset="
 							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w
 						" sizes="100vw" alt="Concert de Nicholas Green" width="1920" height="888">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100 h-auto"
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100 h-auto" loading="lazy"
 						
 						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
 						sizes="100vw" alt="Mariage d'Edward Cisneros" width="1920" height="888">
@@ -92,7 +92,7 @@
 	<section>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.jpg" loading="lazy"
+				<img src="./assets/images/nina.jpg" 
 					srcset="./assets/images/nina-560.webp 560w, ./assets/images/nina-320.webp 320w"
 					sizes="(min-width: 2020px) 560px, (min-width: 1000px) calc(30.6vw - 52px), (min-width: 660px) calc(50vw - 100px), calc(80vw - 51px)"
 					alt="Portrait de Nina Carducci" width="375" height="375">
